syntax = "proto3";
package blocks;

option go_package = "github.com/vinceanalytics/vince/pkg/blocks";

message Metadata { repeated Block blocks = 1; }

// Defines metadata about a single parquet file.
message Block {
  // a ULID string identifier for this block.
  bytes id = 1;
  // Smallest timestamp in milliseconds observed in this block
  int64 min = 2;
  // Largest timestamp in milliseconds observed in this block.
  int64 max = 3;
  // Size on bytes contained in this block
  int64 size = 4;
  // Bloom filters  string fields
  Bloom bloom = 5;

  // Per site statistics for this block.
  map<string, Stats> stats = 6;
}

// Block wise bloom filters.
message Bloom { map<string, bytes> filters = 1; }

message Stats {
  int64 unique_visitors = 1;
  int64 page_views = 2;
  int64 bounce_rate = 3;
  int64 session_duration = 4;
}