syntax = "proto3";
package v1;

import "google/protobuf/duration.proto";
import "vince/config/v1/config.proto";
import "vince/goals/v1/goals.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";

service Sites {
  rpc CreateSite(CreateSiteRequest) returns (CreateSiteResponse) {
    option (google.api.http) = {
      post : "/v1/sites"
    };
  };
  rpc GetSite(GetSiteRequest) returns (Site) {
    option (google.api.http) = {
      get : "/v1/sites"
    };
  };
  rpc ListSites(ListSitesRequest) returns (ListSitesResponse) {
    option (google.api.http) = {
      get : "/v1/site"
    };
  };
  rpc DeleteSite(DeleteSiteRequest) returns (DeleteSiteResponse) {
    option (google.api.http) = {
      delete : "/v1/site"
    };
  };
}

message Site {
  string domain = 1;
  map<string, Goal> goals = 2;
  string description = 3;
}

message CreateSiteRequest {
  string domain = 1 [
    (buf.validate.field).string.hostname = true,
    (buf.validate.field).required = true
  ];
  string description = 2;
}
message CreateSiteResponse { Site site = 1; }
message GetSiteRequest {
  string domain = 1 [
    (buf.validate.field).string.hostname = true,
    (buf.validate.field).required = true
  ];
}
message ListSitesRequest {}
message ListSitesResponse { repeated Site list = 1; }
message DeleteSiteRequest {
  string domain = 1 [
    (buf.validate.field).string.hostname = true,
    (buf.validate.field).required = true
  ];
}
message DeleteSiteResponse {}
